crates/mun_codegen/src/snapshots/mun_codegen__test__assign_shift_op_u128.snap
---
source: crates/mun_codegen/src/test.rs
expression: "\n    pub fn assign_leftshift(a: u128, b: u128) -> u128 {\n        a <<= b;\n        a\n    }\n    pub fn assign_rightshift(a: u128, b: u128) -> u128 {\n        a >>= b;\n        a\n    }\n                        "
---
; == FILE IR (mod) =====================================
; ModuleID = 'fileir:mod'
source_filename = "fileir:mod"

@global_type_lookup_table = external global [1 x i64*]

define i128 @assign_leftshift(i128 %0, i128 %1) {
body:
  %left_shift = shl i128 %0, %1
  ret i128 %left_shift
}

define i128 @assign_rightshift(i128 %0, i128 %1) {
body:
  %right_shift = lshr i128 %0, %1
  ret i128 %right_shift
}

; == GROUP IR (mod) ====================================
; ModuleID = 'filegroupir:mod'
source_filename = "filegroupir:mod"

@global_type_lookup_table = global [1 x i64*] zeroinitializer
