crates/mun_codegen/src/snapshots/mun_codegen__test__assign_shift_op_u32.snap
---
source: crates/mun_codegen/src/test.rs
expression: "\n    pub fn assign_leftshift(a: u32, b: u32) -> u32 {\n        a <<= b;\n        a\n    }\n    pub fn assign_rightshift(a: u32, b: u32) -> u32 {\n        a >>= b;\n        a\n    }\n                        "
---
; == FILE IR (mod) =====================================
; ModuleID = 'fileir:mod'
source_filename = "fileir:mod"

@global_type_lookup_table = external global [1 x i64*]

define i32 @assign_leftshift(i32 %0, i32 %1) {
body:
  %left_shift = shl i32 %0, %1
  ret i32 %left_shift
}

define i32 @assign_rightshift(i32 %0, i32 %1) {
body:
  %right_shift = lshr i32 %0, %1
  ret i32 %right_shift
}

; == GROUP IR (mod) ====================================
; ModuleID = 'filegroupir:mod'
source_filename = "filegroupir:mod"

@global_type_lookup_table = global [1 x i64*] zeroinitializer
